turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:55: error: ')' expected but '}' found.
}
^Turmite:74: error: expected start of definition
	override def run() {
                 ^Turmite:106: error: Unmatched closing brace '}' ignored here
}
^